{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "092bf0ca-5ba1-498a-9081-eb1fb89b999c",
            "actions": [
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "2ac669e2-e613-427e-a835-2263d8d9071d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "moveLeft",
                    "type": "Button",
                    "id": "a5bbd3d1-9bb1-43fa-bf6f-d56aa60d2d2a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "shoot",
                    "type": "Button",
                    "id": "65f6d72c-0754-4cfc-85c5-43a59df7fcee",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "moveRight",
                    "type": "Button",
                    "id": "a56eda27-dbbb-4d8f-b152-157e23007c48",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "start",
                    "type": "Button",
                    "id": "97c589f8-ce9b-4652-bcbb-8c026b1d552d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e000f3a4-3279-4dca-baa3-dd9e5f51f99f",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player1",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2088f1eb-0515-4f32-91ac-38a6e1af19db",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d82c87e-68bd-4fd3-9a17-54c1e15e116d",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player1",
                    "action": "moveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d030be1a-f572-4661-b632-b58c61c1256f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f0974c1-130a-487d-b6ec-1ae6a683fdbe",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player1",
                    "action": "shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f22ab740-e6cd-4dd2-9fd5-1e0e34ff791e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4643972-d925-475b-8929-93cffe81cd95",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player1",
                    "action": "moveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "885b155c-a9d4-4a0c-88e9-e96dbcf3268a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20c1e691-1fb0-41ce-8285-4c12b8839b11",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "start",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player1",
            "bindingGroup": "Player1",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}